--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,11 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
-
+      - name: Pull LFS files
+        run: |
+          git lfs install
+          git lfs fetch --all
+          git lfs pull
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
